networkPolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: "2026-09-20T13:20:41Z"
  labels:
    network-policy-generator.stackrox.io/generated: "true"
  name: stackrox-generated-frontend
  namespace: myapp
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx
      podSelector:
        matchLabels:
          app.kubernetes.io/component: controller
          app.kubernetes.io/instance: ingress-nginx
          app.kubernetes.io/name: ingress-nginx
    ports:
    - port: 80
      protocol: TCP
  podSelector:
    matchLabels:
      app: frontend
  policyTypes:
  - Ingress

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: "2026-09-20T13:20:41Z"
  labels:
    network-policy-generator.stackrox.io/generated: "true"
  name: stackrox-generated-backend
  namespace: myapp
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: frontend
    ports:
    - port: 8080
      protocol: TCP
  - ports:
    - port: 38329
      protocol: UDP
  podSelector:
    matchLabels:
      app: backend
  policyTypes:
  - Ingress

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: "2026-09-20T13:20:41Z"
  labels:
    network-policy-generator.stackrox.io/generated: "true"
  name: stackrox-generated-postgres
  namespace: myapp
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: backend
    ports:
    - port: 5432
      protocol: TCP
  podSelector:
    matchLabels:
      app: postgres
  policyTypes:
  - Ingress
